# conan_targets

./: CMakeLists.txt  prepare.cmd  prepare.sh
executable/: CMakeLists.txt  conanfile.py
executable/src/: Executable.cpp  Executable.h
library_a/: CMakeLists.txt  conanfile.py
library_a/cmake/: ProjectSettings.cmake
library_a/include/LibraryA/: ClassA.h
library_a/src/: ClassA.cpp
library_b/: CMakeLists.txt  conanfile.py
library_b/include/LibraryB/: ClassB.h
library_b/src/: ClassB.cpp
